# To-do_Widget

./: .gitignore  CMakeLists.txt  PngSticker.qml  ToDoSticker.qml  main.cpp  main.qml  sticker.qml
